--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     "rules": {
         "semi": "error",
         "quotes": ["error", "single"],
-        "indent": ["error", 2],
+        "indent": ["error", 2, { "SwitchCase": 1}],
         "react/jsx-filename-extension": "off",
         "jsx-quotes": ["error", "prefer-single"],
         "no-underscore-dangle": "off",
